// Copyright 2024 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.account;
option go_package = "github.com/bucketeer-io/bucketeer/proto/account";
import "proto/environment/environment.proto";

message APIKey {
  enum Role {
    UNKNOWN = 0;
    SDK_CLIENT = 1;
    SDK_SERVER = 2;
    PUBLIC_API_READ_ONLY = 3;
    PUBLIC_API_WRITE = 4;
    // For sensitive data
    PUBLIC_API_ADMIN = 5;
  }
  string id = 1;
  string name = 2;
  Role role = 3;
  bool disabled = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

message EnvironmentAPIKey {
  string environment_namespace = 1 [deprecated = true];
  APIKey api_key = 2;
  bool environment_disabled = 3;
  string project_id = 4 [deprecated = true];
  environment.EnvironmentV2 environment = 5;
  string project_url_code = 6;
}
